--- a/package.json
+++ b/package.json
@@ -4,29 +4,43 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "server": "node src/server.js",
+    "css": "postcss --config ./.postcss"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/daxko/chatxo.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/daxko/chatxo/issues"
   },
   "homepage": "https://github.com/daxko/chatxo#readme",
   "devDependencies": {
+    "autoprefixer": "^6.3.7",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "react-dom": "^15.2.1",
+    "normalize.css": "^4.2.0",
+    "postcss": "^5.1.0",
+    "postcss-cli": "^2.5.2",
+    "postcss-import": "^8.1.2",
+    "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.1"
   },
   "dependencies": {
-    "flux": "^2.1.1",
+    "classnames": "^2.2.5",
+    "koa-mount": "^1.3.0",
+    "koa-route": "^2.4.2",
+    "koa-static": "^2.0.0",
     "react": "^15.2.1",
-    "react-router": "^2.5.2"
+    "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.5.2",
+    "redux": "^3.5.2"
   }
 }
