--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "koa": "^1.2.1",
     "koa-mount": "^1.3.0",
     "koa-route": "^2.4.2",
     "koa-static": "^2.0.0",
