--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true,
-      "impliedStrict": true
+      "impliedStrict": true,
+      "experimentalObjectRestSpread" true
     },
     "sourceType": "module"
   },
